--- a/index.html
+++ b/index.html
@@ -7,24 +7,19 @@
     <style>
         body {
             margin: 0;
-            padding: 20px;
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            padding: 0;
             height: 100vh;
+            width: 100vw;
+            overflow: hidden;
         }
         .chat-container {
-            max-width: 1000px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            height: 80vh;
-            overflow: hidden;
+            width: 100%;
+            height: 100%;
         }
         langflow-chat {
             display: block;
-            height: 100%;
             width: 100%;
+            height: 100%;
         }
     </style>
     <script src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.4/dist/build/static/js/bundle.min.js"></script>
@@ -35,7 +30,7 @@
             window_title="Document Analyzer"
             flow_id="26eda8aa-e1ff-49c0-8211-66cff9127e27"
             host_url="https://api.langflow.astra.datastax.com/lf/63ba6898-079d-4e7a-9525-8f6870e516ee"
-        />
+        ></langflow-chat>
     </div>
 </body>
 </html>
